@@ -1,4 +1,5 @@
 X   0.3
+    * Add Bow + Knockback = pierce blocks
     * Add Shovel + Silk Touch II = harvest fallen snow, fire
     * Add Pickaxe + Silk Touch II = harvest ice
 
